update to use cookies vs plain tokens (#103)
* update to use cookies vs plain tokens

* formatting
